# climate-risk-map

./: .gitignore  README.md  ec2_setup.sh  env.sample
.github/workflows/: application.yml  backend-physical_asset-infraxclimate-scenariomip.yml  data_processing-exposure-nasa_nex.yml  database-v1-etl-exposure-nasa_nex.yml  docker-build.yml  frontend-app.yml
api/v1/: README.md  out.yml  samconfig.toml  template.yml
api/v1/.aws-sam/: build.toml
api/v1/app/: api.py  main.py  utils.py
api/v1/tests/: test_geojson_to_wkt.py
app/: .dockerignore  Dockerfile  app.py  pyproject.toml
app/assets/: climate_thinking.css  dashExtensions_default.js
app/config/: hazard_config.py  map_config.py  settings.py  ui_config.py
app/config/chat/: agents.py  create_ai_agent.ipynb  create_ai_agent.py  prompts.py
app/config/exposure/: asset.py  asset_group.py  definitions.py  transformer.py
app/dao/: database.py  hazard_dao.py
app/services/: auth_service.py  chat_service.py  download_service.py  hazard_service.py  map_service.py
app/tests/: test_api_query.py  test_app_utils.py  test_geojson_to_wkt.py
app/ui/callbacks/: __init__.py  auth_callbacks.py  chat_callbacks.py  download_callbacks.py  legend_callbacks.py  map_callbacks.py
app/ui/components/: base_map_button.py  chat_window.py  control_panel.py  layout.py  legend.py  password_screen.py
app/utils/: file_utils.py  log_utils.py  misc_utils.py
application/: README.md
application/app/: Dockerfile  app.py  pyproject.toml
application/app/api/v1/: README.md
application/app/api/v1/app/: utils.py
application/app/assets/: custom_sliders.css
application/app/config/: hazard_config.py  map_config.py  ui_config.py
application/app/config/chat/: messages.py
application/app/config/exposure/: __init__.py  asset.py  definitions.py
application/app/dao/: database.py  exposure_dao.py
application/app/services/: chat_service.py  download_service.py  hazard_service.py  map_service.py
application/app/tests/: test_api_query.py  test_infraxclimate_api.py
application/app/ui/callbacks/: legend_callbacks.py  map_callbacks.py
application/app/ui/components/: control_panel.py  layout.py  legend.py
application/nginx/: nginx.conf
assets/: dashExtensions_default.js
backend/climate/: env.sample  pipeline.py  process_climate.py  utils.py
backend/infra-etl-service/: .pgosm-db-osminfra  README.md  sample.env
data_processing/climate/: main.py  pyproject.toml
data_processing/climate/src/: constants.py  ensemble.py  file_utils.py  pipeline.py  utils.py
data_processing/climate/src/indicators/: climate_indices_fork.py  fwi.py  precip.py  spei.py
data_processing/geotiff/: Dockerfile  README.md  pyproject.toml
data_processing/geotiff/src/: main.py
data_processing/geotiff/src/assets/: README.md
data_processing/hazards/flood/precip/nasa_nex/: Dockerfile  README.md  aws_batch.py  historical_baseline_pfe.py  pfe_calc.py  pyproject.toml
data_processing/hazards/flood/precip/nasa_nex/src/: constants.py  ensemble.py  main.py  models.py
data_processing/hazards/wildfire/fwi/nasa_nex/ensemble_calc/: Dockerfile  README.md  pyproject.toml  requirements.txt
data_processing/hazards/wildfire/fwi/nasa_nex/ensemble_calc/src/: ensemble.py
data_processing/hazards/wildfire/fwi/nasa_nex/ensemble_calc/tests/: test_process_climate.py
database/v1/: README.md  climate_datasets.json  config.json  create_views.sh  database.sh  env.sample  init_db.sql  setup_database.sh  update_views.sh
database/v1/etl/exposure/nasa_nex/: Dockerfile  README.md  pyproject.toml
database/v1/etl/exposure/nasa_nex/src/: constants.py  infra_intersection.py  infra_intersection_load.py  process_climate.py  run.py  utils.py
database/v1/etl/exposure/nasa_nex/tests/: test_infra_intersection.py
database/v1/etl/geotiff/: Dockerfile  README.md  pyproject.toml
database/v1/etl/geotiff/src/: main.py
database/v1/etl/geotiff/src/regions/: south_korea.geojson  us_virgin_islands.geojson
experimentation/: salmon_webscrape.py
experimentation/ai_service/: amazon_bedrock.ipynb
experimentation/archive/: fire_likelihood.py
experimentation/frontend/dash_leaflet/vectorgrid/: pyproject.toml
experimentation/frontend/dash_leaflet/vectorgrid/tegola/: config.toml
experimentation/frontend/dash_leaflet/vectorgrid/vectorgrid/: app.py  test.ipynb
experimentation/frontend/dash_leaflet/vectorgrid/vectorgrid/assets/: dashExtensions_default.js
experimentation/student_projects/muni_bond_spring_2025/: README.md  main.py  median_income.py  pyproject.toml  utils.py  wildfire.ipynb
experimentation/tile_service/: README.md  docker-compose.yml
frontend/: README.md  docker-compose.yml  env.sample
frontend/app/: Dockerfile  README.md  api_sample.py  app.py  app_config.py  app_control_panel.py  app_map.py  app_utils.py  infraxclimate_api.py  pyproject.toml
frontend/app/assets/: dashExtensions_default.js
frontend/app/config/: asset_config.py  map_config.py  settings.py  ui_config.py
frontend/app/config/ai/: create_agent.ipynb
frontend/app/config/asset/: config.py  definitions.py  transformer.py
frontend/app/config/chat/: create_ai_agent.ipynb  messages.py  prompts.py
frontend/app/config/exposure/: asset.py  definitions.py
frontend/app/data/: api.py  database.py  exposure_dao.py  hazard_dao.py
frontend/app/services/: chat_service.py  download_service.py  map_service.py
frontend/app/tests/: test_app_utils.py  test_infraxclimate_api.py
frontend/app/ui/callbacks/: __init__.py  ai_callbacks.py  chat_callbacks.py  chat_window_callbacks.py  download_callbacks.py
frontend/app/ui/components/: ai_chat.py  ai_popoup.py  chat_window.py  control_panel.py  layout.py  legend.py
frontend/app/utils/: error_utils.py  geo_utils.py
frontend/app_refactor/: Dockerfile  app.py  pyproject.toml
frontend/dash_leaflet/: Dockerfile  README.md  api_test.py  app.py  app_config.py  app_control_panel.py  app_map.py  app_utils.py  environment.yml  infraxclimate_api.py  osm_api.py  requirements.txt
frontend/nginx/: dev.conf
nginx/: dev.conf
research/: README.md
(+208 files in other folders)
