[tool.poetry]
name = "crlfrontend"
version = "0.1.0"
description = "Frontend of the UW Climate Risk Map"
authors = ["Eric Collins <ecol07@uw.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37"
psycopg2-binary = "^2.9.9"
dash = "2.17"
dash-leaflet = "1.0.15"
dash-extensions = "1.0.16"
httpx = "^0.27.2"
pandas = "2.2"
dash-bootstrap-components = "1.6"
gunicorn = "^23.0.0"
geojson-pydantic = "^1.1.1"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
