[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "boto3>=1.37,<2.0",
    "psycopg2-binary>=2.9.9,<2.10.0",
    "dash==2.17",
    "dash-leaflet==1.0.15",
    "dash-extensions==1.0.16",
    "httpx>=0.27.2,<0.28.0",
    "pandas>=2.2.3, <3.0.0",
    "dash-bootstrap-components==1.6",
    "gunicorn>=23.0.0,<24.0.0",
    "geojson-pydantic>=1.1.1,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
