[tool.poetry]
name = "geotiff"
version = "0.1.0"
description = "For generating geotiffs for the frontend"
authors = ["eric <collinseric321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.11"
xarray = "^2024.7"
numpy = "^2"
s3fs = "^2024"
rioxarray = "^0.17"
cftime = "^1.6"
boto3 = "^1.35.11"
geopandas = "^1.0.1"
fsspec = "^2024.12.0"
zarr = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
