[project]
name = "muni"
version = "0.1.0"
description = "Utilities Muni Bond x Wildfire"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "cftime>=1.6.4.post1",
    "exactextract>=0.2.2",
    "geopandas>=1.0.1",
    "rioxarray>=0.19.0",
    "xarray>=2025.4.0",
    "xvec>=0.3.1",
]
