[project]
name = "geotiff"
version = "0.1.0"
description = "Parses zarr to geotiff"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "xarray>=2024.7",
    "numpy>=2",
    "s3fs>=2024",
    "scipy>=1.15.2",
    "rioxarray>=0.17",
    "cftime>=1.6",
    "boto3>=1.35.11",
    "geopandas>=1.0.1",
    "fsspec>=2024.12.0",
    "zarr>=3.0.0"
]
