[project]
name = "precip"
version = "0.1.0"
description = "Calculating precipitation indicators"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "bokeh>=3.7.2",
    "boto3>=1.37.1",
    "cftime>=1.6.4.post1",
    "dask>=2025.3.0",
    "distributed>=2025.3.0",
    "fsspec>=2025.3.2",
    "h5netcdf>=1.6.1",
    "psutil>=7.0.0",
    "s3fs>=2025.3.2",
    "scipy>=1.15.2",
    "xarray>=2025.3.1",
    "xclim>=0.56.0",
    "zarr==2.18.7",
]
