[project]
name = "nasa-nex-exposure"
version = "0.1.0"
description = "Exposure processing pipeline for NASA NEX GDDP climate indicators"
readme = "README.md"
requires-python="==3.12.3"
dependencies = [
    "xarray>=2024.7",
    "numpy>=2",
    "s3fs>=2024",
    "rioxarray>=0.17",
    "cftime>=1.6",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.35.11",
    "geopandas>=1.0.1",
    "xvec>=0.3.0",
    "exactextract>=0.2.1",
    "fsspec>=2024.12.0",
    "zarr>=3.0.0",
    "dask>=2024.12.1"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
